# p5-sdl-imitation

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: Canvas.cpp.7F41DB1BB315B6FE.idx  Canvas.cpp.BB722F626024DD7D.idx  Canvas.hpp.2A234C736B90436C.idx  Canvas.hpp.A121F33B649DB8AB.idx  ExampleSketch.cpp.69BA1AA43C79415D.idx  ExampleSketch.hpp.E15251922FE53D30.idx  SDL.c.A0F4E9A2310CA695.idx  SDL.h.2E5642853C445BC9.idx  SDL3_framerate.c.D976191A4F38F353.idx  SDL3_framerate.h.21ADEB06DCC9924A.idx  SDL3_gfxPrimitives.c.394F9B031E71F2C8.idx  SDL3_gfxPrimitives.h.7FB7B5FCA4A24A79.idx  SDL3_gfxPrimitives_font.h.EB67DA8F38264470.idx  SDL3_imageFilter.c.0649C3BFFDF33032.idx  SDL3_imageFilter.h.4E54D706491F77C5.idx  SDL3_rotozoom.c.01BB4D97F9491631.idx  SDL3_rotozoom.h.A75522F14F5778F7.idx  SDL_RLEaccel.c.3D06401D4C09FF26.idx  SDL_RLEaccel_c.h.EA4C3B2A5FD7CE6D.idx  SDL_appid.c.A2167577B425DFFA.idx  SDL_appid.h.CD55F4EE38A3A614.idx  SDL_assert.c.679836A640FA1CA2.idx  SDL_assert.h.96682BD3A45A2BD8.idx  SDL_assert_c.h.249BB691D3D8849D.idx  SDL_asyncio.c.0CF73330F587D695.idx  SDL_asyncio.h.D42507171037F14B.idx  SDL_asyncio_c.h.56303EF0713D8FCA.idx  SDL_asyncio_generic.c.BA683B9B8C1E56D4.idx  SDL_atomic.c.6D13DBA388BFF140.idx  SDL_atomic.h.996A6134D08E3332.idx  SDL_audio.c.FB691F16C8F0AE22.idx  SDL_audio.h.CA38B10D17122093.idx  SDL_audio_c.h.8F00F1C3B900CA72.idx  SDL_audio_channel_converters.h.9D77CC41E1B4C83F.idx  SDL_audiocvt.c.A88188330E8C7BD0.idx  SDL_audiodev.c.A3F470F37FD00055.idx  SDL_audioqueue.c.8DA470B23C2F2E28.idx  SDL_audioqueue.h.0D4C523935CB2E84.idx  SDL_audioresample.c.90540500E145606D.idx  SDL_audioresample.h.F4E5DCAE295E76A9.idx  (+601 more)
cmake/: options.cmake  warnings.cmake
include/: Canvas.hpp  NotImplementedException.hpp  Sketch.hpp
include/myproj/: version.h.in
src/: CMakeLists.txt  Canvas.cpp  main.cpp
src/engine/: Canvas.cpp  Canvas.hpp  Entity.hpp  Graphics.hpp  Position.hpp  Rand.cpp  Rand.hpp  Sketch.hpp
src/engine/util/: Rand.cpp  Rand.hpp  Vec.hpp
src/sketches/: ExampleSketch.cpp  ExampleSketch.hpp
src/sketches/ch0_randomness/: sketch.cpp  sketch.hpp
src/sketches/ch0_randomness/entities/: Walker.cpp  Walker.hpp
src/sketches/example/: ExampleSketch.cpp
tests/: CMakeLists.txt
